assets/css/style.css
/* ... */
@keyframes glitch-skew {
    0% {
        transform: skew(4deg);
    }
    10% {
        transform: skew(5deg);
    }
    20% {
        transform: skew(1deg);
    }
    30% {
        transform: skew(1deg);
    }
    40% {
        transform: skew(5deg);
    }
    50% {
        transform: skew(1deg);
    }
    60% {
        transform: skew(0deg);
    }
    70% {
        transform: skew(3deg);
    }
    80% {
        transform: skew(4deg);
    }
    90% {
        transform: skew(5deg);
    }
    100% {
        transform: skew(-1deg);
    }
}


/*=================================================================
    Footer
=================================================================*/
.social-icon {
    padding: 60px 0 35px;
}

.social-icon ul {
    text-align: center;
}

.social-icon ul li {
    margin-bottom: 4px;
}

.social-icon ul li a {
    background-color: #26292e;
    border: 2px solid #57cbcc;
    border-radius: 50%;
    display: block;
    height: 70px;
    width: 70px;
    transition: all 400ms ease-out 0s;
}

.social-icon ul li a:hover {
    background: #57cbcc;
}

.social-icon ul li a:hover i {
    color: #4e0055;
    opacity: 1;
}

.social-icon ul li a i {
    color: #57cbcc;
    display:  inline-block;
    font-size: 32px;
    line-height: 70px;
    margin: 0;
    opacity: 0.3;
    transition: all 400ms ease-out 0s;   
}

.social-icon-img {
    padding: 10px;
}

.social-icon-img:hover {
    opacity: 60%;
}

.copyright {
    padding: 20px 0;
    color: #fff;
}

.copyright img {
    margin-bottom: 15px;
}

.copyright p {
    margin-top: 10px;
}

#scrollUp {
    border: 1px solid #4e595f;
    bottom: 15px;
    color: #fff;
    display: none;
    padding: 8px 12px;
    position: fixed;
    right: 20px;
    z-index: 600;
}

#scrollUp:hover {
    background-color: #57cbcc;
    border: 1px solid #57cbcc;
}


/*==================================================================
  Latest Posts
==================================================================*/
.note {
    background-color: #292F36;
    border: 1px solid #4e595f;
}

.post-block {
    background-color: #040b1e;
    margin-bottom: 10px;
}

.post-block .content {
    padding: 20px;
}

.post-block .content h3 {
    margin: 0 0 6px;
    font-size: 20px;
    line-height: 1.5;
    text-transform: capitalize;
}

.note .media-wrapper {
    border-bottom: 1px solid #4e595f;
}

.note .excerpt h3 {
    font-size: 20px;
    line-height: 1.5;
    text-transform: capitalize;
}

.all-post {
    margin-top: 50px;
}


/*==================================================================
    Portfolio section
==================================================================*/
.portfolio-filter {
    margin-bottom: 40px;
    text-align: center;
} 

.portfolio-filter .btn {
    outline: 0;
    border: 1px solid rgba(236, 236, 241, 0.07);
    background: transparent;
    display: inline-block;
    font-size: 16px;
    padding: 6px 20px;
    font-weight: 700;
    color: #bad8dd;
    transition: .3s all;
}

.portfolio-filter .btn.active {
    border-color: #57cbcc;
}

.portfolio-block {
    position: relative;
}

.portfolio-block:before {
    transition:  all 0.3s ease-in-out;
    background: rgba(255, 255, 255, 0.226);
    opacity: 0;
    top: 2px;
    right: 2px;
    bottom: 2px;
    left: 2px;
    position: absolute;
    content: '';
}

.portfolio-block img {
    width: 100%;
    height: auto;
}

.portfolio-block:hover:before {
    opacity: 1;
}

.portfolio-block:hover .caption h4{
    top: 45%;
}

.portfolio-block:hover .caption {
    opacity: 1;
    top: 55%;
}

.portfolio-block .caption {
    position: absolute;
    top: 50%;
    left: 50%;
    opacity: 0;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    z-index: 9;
    transition: all 0.2s ease-in-out;
    text-align: center;
}

.portfolio-block .caption h4 {
    font-size: 16px;
    font-weight: 600;
}

.portfolio-block .caption h4 a {
    color: #555;
}

.portfolio-block .caption p {
    color: #666;
}

.portfolio-block .caption .search-icon {
    background: #57cbcc;
    width: 50px;
    height: 50px;
    color: rgba(255, 255, 255, 0.199);
    display: inline-block;
    font-size: 20px;
    border-radius: 30px;
}

.portfolio-block .caption .search-icon i {
    line-height: 50px;
}

.portfolio-category {
    background: #0f1e31;
    size: 80%;
    margin-top: 8px;
    margin-bottom: 8px;
    border-radius: 16px;
}

.portfolio-category-title {
    border-radius: 16px;
    margin-top: 8px;
    margin-left: -8px;
    margin-bottom: 8px;
    margin-right: -8px;
}

.wrapper { 
  max-width: 1280px;
  margin-right: auto;
  margin-left: auto;
  padding: 1.5em;
}


.masonry-wrapper {
  padding: 1.5em;
  max-width: auto;
  margin-right: auto;
  margin-left: auto;
}

.masonry {
  display: grid;
  grid-template-columns: repeat(1, minmax(100px,1fr));
  grid-gap: 10px;
  grid-auto-rows: 0;
}

@media only screen and (max-width: 1023px) and (min-width: 768px) {
  .masonry {
    grid-template-columns: repeat(2, minmax(100px,1fr));
  }
}
@media only screen and (min-width: 1024px) {
  .masonry {
    grid-template-columns: repeat(4, minmax(100px,1fr));
  }
}
.masonry-item, .masonry-content {
  border-radius: 4px;
  overflow: hidden;
  width: 100%;
  height: auto;
}
.masonry-item {
  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .6));
  transition: filter .25s ease-in-out;
}
.masonry-item:hover {
  filter: drop-shadow(0px 5px 5px rgba(0, 56, 56, 0.774));
}

/*==================================================================
    Art Carousel
==================================================================*/
#ArtCarousel{
    background-color: #0f1e31;
    border-radius: 10px;
    padding: 16px;
}

.item img {
    padding: 0 4px;
    border-radius: 10px;
}

.item-center {
    display: flex;
    justify-content: center;
}
/* ... */

